# fast_clip

./: .gitignore  Cargo.toml  README.md
crates/app_assets/: Cargo.toml
crates/app_assets/src/: lib.rs
crates/app_assets/src/icons/: gpui_components.rs  mod.rs  rounded.rs
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: reqwest_client.rs
locales/: app.yaml
src/: main.rs
src/components/: app_menu.rs  app_title_bar.rs  mod.rs
src/models/: model.rs
src/service/: mod.rs
src/ui/: about.rs  app.rs  button.rs  chip.rs  ffmpeg.rs  mod.rs  player_size.rs  timeline.rs  viewer.rs
src/ui/assets/: assets.rs  icons.rs
src/ui/output/: output.rs
src/ui/player/: audio.rs  decoder.rs  ffmpeg.rs  frame.rs  mod.rs  model.rs  player.rs  size.rs  timer.rs  utils.rs  viewer.rs
src/ui/views/: about.rs  app.rs  mod.rs  output.rs  player_settings.rs
