[package]
name = "ez_cut"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/reqwest_client"
]

[workspace.lints]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
gpui = { git = "https://github.com/zed-industries/zed" }
log = "0.4"
reqwest = { version = "0.12.25", features = ["json", "blocking", "rustls-tls", "stream", "rustls-tls-native-roots"] }
serde = "1.0.228"
serde_json = "1.0.145"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component.git" }
tokio = {version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"]}
reqwest.workspace = true

reqwest_client = { path = "crates/reqwest_client" }
serde_json.workspace = true
