[package]
name = "fast_clip"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/reqwest_client",
    "crates/app_assets",
]

[workspace.lints]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
gpui = { git = "https://github.com/zed-industries/zed" }
log = "0.4"
reqwest = { version = "0.12.25", features = ["json", "blocking", "rustls-tls", "stream", "rustls-tls-native-roots"] }
serde = "1.0.228"
serde_json = "1.0.145"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component.git" }
reqwest.workspace = true

reqwest_client = { path = "crates/reqwest_client" }
app_assets = { path = "crates/app_assets" }
serde_json.workspace = true
smallvec = "1.15.1"
image = "0.25.9"
ffmpeg-next = "8.0.0"
async-channel = "2.5.0"
ringbuf = "0.4.9"
cpal = "0.17.1"
rust-i18n = "3.1.5"
path-absolutize = "3.1.1"
atomic_float = "1.1.0"

[build-dependencies]
winres = "0.1.12"
